# vertile

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
core/: .env.development  next.config.mjs  package.json  tailwind.config.js  tsconfig.json
core/app/: layout.tsx
core/app/api/workflows/: service.ts  validation.ts
core/app/api/workflows/[id]/: route.ts
core/app/components/: AppIcon.tsx
core/app/components/ui/: AnimatedDropdown.tsx  TooltipPlus.tsx
core/app/components/workflow/: RunWorkflowButton.tsx  SaveStatusIcon.tsx  WorkflowError.tsx
core/app/lib/: prisma.ts
core/app/lib/api/: websocket.ts
core/app/lib/common/: util.types.ts  workflow.types.ts
core/app/lib/graph/: index.ts
core/app/workflows/: page.tsx
core/app/workflows/[id]/: const.ts  context.tsx  hooks.ts  page.css  page.tsx  style.css  types.ts
core/app/workflows/[id]/hooks/: index.ts  use-workflow-execution.ts
core/app/workflows/new/: page.tsx
core/prisma/: schema.prisma
core/src/components/reusable/: AnimatedDropdown.component.tsx
core/src/components/workflow/: constants.ts  context.tsx  custom-edge.tsx  index.tsx  store.ts  style.css  types.ts  utils.ts
core/src/components/workflow/hooks/: hooks.ts  use-edges-interactions.ts  use-node-execution.ts  use-selection-interactions.ts  workflow.hooks.ts
core/src/pages/: workflow.page.tsx
core/test/: mcp-parser.cjs
core/test/fixture/: workflow-nodes.ts
frontend/: next.config.mjs  package.json
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/app/api/workflows/: service.ts  validation.ts
frontend/app/components/: Sidebar.tsx  SidebarNavItem.tsx
frontend/app/components/sidebar/: index.tsx  nav-item.tsx
frontend/app/components/workflow/: LoadingWorkflow.tsx
frontend/app/lib/api/: websocket.ts
frontend/app/lib/common/: workflow.types.ts
frontend/app/lib/graph/: index.ts
frontend/app/workflows/: hook.ts  page.tsx
frontend/app/workflows/[id]/: page.tsx  service.ts  types.ts  util.ts
frontend/prisma/: schema.prisma
pycore/: .env.development  .env.example  Dockerfile  README.md  __init__.py  alembic.ini  main.py  pyproject.toml  run.py  setup.py
pycore/alembic/: env.py
pycore/app/: __init__.py  main.py
pycore/app/api/v1/: api.py  websocket.py
pycore/app/api/v1/endpoints/: health.py  items.py  tasks.py
pycore/app/core/: __init__.py  config.py  db.py  websocket.py
pycore/app/models/: __init__.py  item.py  schemas.py  workflow.py
pycore/app/services/: __init__.py  file_service.py  item_service.py  workflow_execution.py
pycore/test/: README.md
pycore/test/services/: test_ocr_execution.py
python/: README.md  pyproject.toml
python/app/api/v1/: api.py  websocket.py
python/app/core/: config.py
python/app/executors/: base_executor.py  llm_executor.py  ocr_executor.py
python/app/models/: __init__.py  dataset_file.py  workflow.py  workflow_edge.py  workflow_execution.py  workflow_node.py
python/app/services/: __init__.py  ocr_execution.py  websocket_manager.py  workflow_execution.py
python/test/__fixtures__/prompts/: payslip.md
python/test/executors/: test_llm_executor.py  test_ocr_execution.py
(+106 files in other folders)
