[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[project]
name = "vertile-api"
version = "0.1.0"
description = "Vertile FastAPI Backend"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.24.0",
    "websockets==12.0",
    "pydantic>=2.8.0",
    "pydantic-settings==2.9.1",
    "python-dotenv==1.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "langchain>=0.3.24",
    "surya-ocr>=0.13.1",
    "playwright>=1.52.0",
    "pillow>=10.2.0,<11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
    "black>=22.1.0",
    "isort>=5.10.0",
    "mypy>=0.931",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
